--- a/inst/htmlwidgets/lib/diffviewer/diffviewer.css
+++ b/inst/htmlwidgets/lib/diffviewer/diffviewer.css
@@ -1,3 +1,5 @@
+.d2h-diff-table{width:100%;border-collapse:collapse;font-family:Menlo,Consolas,monospace;font-size:13px}
+
 .diffviewer * {
     box-sizing: border-box;
 }
@@ -165,7 +167,8 @@
 .diffviewer .image-diff .image-diff-controls {
     padding: 5px 5px;
     background: #f8fafd;
-    border-top: 1px solid #d8d8d8;
+    /* remove to match style of d2h
+    border-top: 1px solid #d8d8d8; */
 }
 
 .diffviewer .image-diff-controls .image-diff-button {
@@ -366,4 +369,41 @@
     transition-property: width, height;
     transition-duration: 0.15s;
     transition-timing-function: ease;
+}
+
+table.highlighter {
+    /*
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    */
+    font-family: Menlo,Consolas,monospace;
+    font-size: 13px;
+
+}
+
+table.highlighter .add {
+    background-color: #97F295;
+}
+
+table.highlighter .remove {
+    background-color: #FFB6BA;
+}
+
+table.highlighter .spec {
+    background-color: #bcbcbc;
+}
+
+table.highlighter td, table.highlighter th {
+    border: 1px solid #eee;
+}
+
+table.highlighter tr.header th {
+    border-bottom: 2px solid #eee;
+}
+
+table.highlighter tr:first-child td {
+    border-top: 1px solid #eee;
+}
+
+table.highlighter td:first-child {
+    border-left: 1px solid #eee;
 }
